minor linux fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 cmake_minimum_required(VERSION 3.0)
 project(libhttproute)
+if(CMAKE_COMPILER_IS_GNUCC)
+	# GCC 4.8.4 C++11
+	#set(CMAKE_CXX_FLAGS "-std=c++11")
+	# GCC 4.8.4 C++14
+	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+	# GCC 5.2.X C++14
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+	# Strict flags
+	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+endif(CMAKE_COMPILER_IS_GNUCC)
 set(headers
 	defines.h
 	http_server_request.h
@@ -24,6 +34,7 @@ add_library(
 )
 
 # unit test
+if(WIN32)
 include_directories(../googletest/googletest/include)
 add_executable(
 	${PROJECT_NAME}_test
@@ -31,6 +42,7 @@ add_executable(
 	${sources}
 	router_test.cpp
 )
+endif(WIN32)
 if(WIN32)
 	target_link_libraries(
 		${PROJECT_NAME}_test
