Adds option to build shared library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,30 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 2.8)
 project(libhttproute)
 
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
+set(VERSION_MAJOR 1)
+set(VERSION_MINOR 0)
+set(VERSION_PATCH 0)
+set(VERSION_EXTRA "")
+
+#
+# Options
+#
+
+option(BuildShared "BuildShared" OFF)
+option(BuildTests "BuildTests" OFF)
+
+if(BuildShared)
+	set(StaticOrShared "SHARED")
+	add_definitions(-DLIBHTTPROUTE_EXPORT)
+else(BuildShared)
+	set(StaticOrShared "STATIC")
+endif(BuildShared)
 
 if(WIN32)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+	add_definitions(/Zc:wchar_t-)
+	add_definitions(/INCREMENTAL:NO)
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
 endif(WIN32)
 
 if(CMAKE_COMPILER_IS_GNUCC)
@@ -16,10 +35,13 @@ if(CMAKE_COMPILER_IS_GNUCC)
 	# GCC 5.2.X C++14
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 	# Strict flags
-	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 endif(CMAKE_COMPILER_IS_GNUCC)
 
-# basic library sources
+#
+# Sources
+#
+
 set(headers
 	libhttproute/defines.h
 	libhttproute/request.h
@@ -32,22 +54,32 @@ set(headers
 	libhttproute/route_matcher_impl.h
 	libhttproute/router.h
 )
+
 set(sources
 	libhttproute/request_impl.cpp
 	libhttproute/match.cpp
 	libhttproute/route.cpp
 	libhttproute/router.cpp
 )
+
+#
+# Target
+#
+
 add_library(
 	${PROJECT_NAME}
-	STATIC
+	${StaticOrShared}
 	${headers}
 	${sources}
 )
 
-# unit test
+#
+# Tests
+#
+
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 find_package(GoogleTest)
-if(GOOGLETEST_FOUND)
+if(GOOGLETEST_FOUND AND BuildTests)
 	include_directories(${PROJECT_SOURCE_DIR})
 	include_directories(${GOOGLETEST_INCLUDE_DIRS})
 	add_executable(
@@ -59,4 +91,4 @@ if(GOOGLETEST_FOUND)
 		${PROJECT_NAME}
 		${GOOGLETEST_LIBRARY}
 	)
-endif(GOOGLETEST_FOUND)
+endif(GOOGLETEST_FOUND AND BuildTests)
